# reed-solomon-erasure

./: CMakeLists.txt  README.md  README.zh-CN.md
bench/: CMakeLists.txt  bandwidth.cpp
cmake/: reed_solomon_erasure-config.cmake.in
doc/: decoding-internals.zh-CN.md  decoding-walkthrough.zh-CN.md  encoding-matrix-anatomy.zh-CN.md  full-matrix-walkthrough.zh-CN.md  gf2-16-and-primitive-poly.zh-CN.md  polynomials.zh-CN.md  rabin-irreducibility-test.zh-CN.md  worked-example.zh-CN.md
include/rse/: config.hpp  errors.hpp  field.hpp  galois_16.hpp  galois_8.hpp  matrix.hpp  reed_solomon.hpp  rse.hpp  shard_by_shard.hpp
include/rse/detail/: gf8_tables.hpp  lru_cache.hpp  shard_view.hpp
src/: galois_8.cpp  galois_simd.hpp  gf8_simd_avx2.cpp  gf8_simd_avx512.cpp  gf8_simd_kernel.hpp  gf8_simd_neon.cpp  gf8_simd_ssse3.cpp
tests/: CMakeLists.txt  shared_link_check.cpp  test_errors.cpp  test_galois_16.cpp  test_galois_8.cpp  test_helpers.hpp  test_main.cpp  test_matrix.cpp  test_reed_solomon.cpp  test_reed_solomon_gf16.cpp
